--- a/works/common-pageStyle.css
+++ b/works/common-pageStyle.css
@@ -57,10 +57,10 @@ header .h-nav .nav-title h1 a {
   display: block;
   width: 100%;
   height: 100%;
-  background: url(../images/logo_white.png) no-repeat 70% 50% / 200px;
+  background: url(../images/logo_white.png) no-repeat 2vw 50% / 180px;
 }
 
-/* 수정해보는 메뉴 css */
+/* 움직이는 햄버거메뉴 */
 
 header .h-nav .nav-title .flex_wrap {
   cursor: pointer;
